syntax = "proto3";

option java_package = "io.confluent.kafka.serializers.protobuf.test";

// Wrapper message for `uint32`.
message RefByAnother {
    uint32 value = 1;
}
