syntax = "proto3";

import "RefByAnother.proto";

option java_package = "io.confluent.kafka.serializers.protobuf.test";

message WithExternalReference {
    RefByAnother value1 = 1;
    uint32 value2 = 2;
}
